# cross-platform-dlib

./: README.md  build.sh  dlib.h  main.cpp  test-widget1.cpp  test-widget2.cpp
example/: CMakeLists.txt  main.cpp  test-widget1.cpp  test-widget2.cpp  widget.hpp
test/: CMakeLists.txt  main.cpp  test-widget1.cpp  test-widget2.cpp  widget.hpp
